# VAE

./: .gitignore  README.md  README_CHECKPOINTS.md  VAE.py  checkpoint_manager.py  config.py  config.template.yaml  env_template.txt  net.py  prepare_celeba_patched.py  pyproject.toml  setup_config.bat
